<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentInfoActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profilna"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_picture"
        />

    <Spinner
        android:id="@+id/spinnerPredmet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profilna"
        app:layout_constraintStart_toEndOf="@+id/profilna"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:outlineSpotShadowColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvProfesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPredmet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etProfesor"
        app:layout_constraintBottom_toBottomOf="@id/etProfesor"
        android:text="@string/profesor"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/etProfesor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPredmet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvProfesor"
        android:theme="@style/TextInputLayoutStyle"
        />

    <TextView
        android:id="@+id/tvGodina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etProfesor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etGodina"
        app:layout_constraintBottom_toBottomOf="@id/etGodina"
        android:text="@string/ak_god"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/etGodina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etProfesor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvGodina"
        android:theme="@style/TextInputLayoutStyle"
        />

    <TextView
        android:id="@+id/tvBrojPredavanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etGodina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etBrojPredavanja"
        app:layout_constraintBottom_toBottomOf="@id/etBrojPredavanja"
        android:text="@string/br_predavanja"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/etBrojPredavanja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etGodina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBrojPredavanja"
        android:theme="@style/TextInputLayoutStyle"
        />

    <TextView
        android:id="@+id/tvBrojLV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etBrojPredavanja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etBrojLV"
        app:layout_constraintBottom_toBottomOf="@id/etBrojLV"
        android:text="@string/br_lv"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/etBrojLV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/etBrojPredavanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBrojLV"
        android:theme="@style/TextInputLayoutStyle"
        />

    <!--<Button
        android:id="@+id/button"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonDalje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        style="@style/ButtonStyle"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>