<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfoActivity">

    <ImageView
        android:id="@+id/profilna"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile_picture"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiIme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profilna"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tiPrezime"
        android:layout_marginLeft="16dp"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etIme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:hint="@string/ime">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPrezime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profilna"
        app:layout_constraintStart_toEndOf="@+id/tiIme"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrezime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="13"
            android:hint="@string/prezime">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/tiIme"/>

    <TextView
        android:id="@+id/tvDatumRod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/datum_rodenja"
        app:layout_constraintTop_toTopOf="@+id/etDatumRodenja"
        app:layout_constraintBottom_toBottomOf="@+id/etDatumRodenja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etDatumRodenja"
        style="@style/TextViewStyle"/>

    <EditText
        android:id="@+id/etDatumRodenja"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintStart_toEndOf="@+id/tvDatumRod"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/TextInputLayoutStyle"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/etDatumRodenja"/>

    <!--<Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/buttonDalje"
        style="@style/ButtonStyle"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>